Fix overflow issue on mobile.

--- a/notes-app/src/css/components.css
+++ b/notes-app/src/css/components.css
@@ -22,5 +22,5 @@
   background: transparent;
   overflow: hidden;
   resize: none;
-  width: 100%;
+  width: -webkit-fill-available;
 }
