--- a/notes-app/src/css/index.css
+++ b/notes-app/src/css/index.css
@@ -2,10 +2,15 @@
   --main-font: sans-serif;
 }
 
+html,
+body,
+#root {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   font-family: var(--main-font);
-  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
